Fixing visualizations and organization

--- a/main.ipynb
+++ b/main.ipynb
@@ -22,10 +22,10 @@
     "team_summaries_df = pd.read_csv(\"Team Summaries.csv\")\n",
     "team_total_df = pd.read_csv(\"Team Totals.csv\")\n",
     "team_df = pd.merge(team_total_df, team_summaries_df, how='outer')\n",
-    "team_df.head()\n",
+    "\n",
     "pd.set_option('display.max_columns', 500)\n",
     "\n",
-    "team_df\n",
+    "team_df.head()\n",
     "\n"
    ]
   },
@@ -112,7 +112,17 @@
     "defensive_rebounds_per_game = defensive_rebounds_per_game.map(\"{:,.2f}\".format)\n",
     "team_reduced_df[\"Defensive Rebounds Per Game\"] = defensive_rebounds_per_game\n",
     "\n",
+    "#Renaming teams to include season\n",
     "team_reduced_df['Team Season'] = team_reduced_df['Team'] + ' ' + team_reduced_df['Season'].astype(str)\n",
+    "\n",
+    "# Convert string columns back to numerical values\n",
+    "team_reduced_df[\"Assists Per Game\"] = team_reduced_df[\"Assists Per Game\"].astype(float)\n",
+    "team_reduced_df[\"Points Per Game\"] = team_reduced_df[\"Points Per Game\"].astype(float)\n",
+    "team_reduced_df[\"Blocks Per Game\"] = team_reduced_df[\"Blocks Per Game\"].astype(float)\n",
+    "team_reduced_df[\"Steals Per Game\"] = team_reduced_df[\"Steals Per Game\"].astype(float)\n",
+    "team_reduced_df[\"Offensive Rebounds Per Game\"] = team_reduced_df[\"Offensive Rebounds Per Game\"].astype(float)\n",
+    "team_reduced_df[\"Defensive Rebounds Per Game\"] = team_reduced_df[\"Defensive Rebounds Per Game\"].astype(float)\n",
+    "\n",
     "\n",
     "team_reduced_df.head()\n",
     "\n",
@@ -128,7 +138,7 @@
    "source": [
     "##Cleaning Offensive DF\n",
     "offensive_df = team_reduced_df[[\"Team Season\", \"Playoffs\", \"Offensive Rating\", \"Points Per Game\", \"Field Goal Percentage\", \"Two-Point Percentage\", \"Three-Point Percentage\", \"Free Throw Percentage\", \"Offensive Rebounds Per Game\", \"Offensive Rebounds\", \"Offensive Rebound Percentage\", \"Assists Per Game\", \"Assists\", \"Wins\", \"Losses\", \"Free Throw Rate\", \"Three-Point Attempt Rate\", \"Effective Field Goal Percentage\", \"Turnover Percentage\"]]\n",
-    "offensive_df"
+    "offensive_df.head()"
    ]
   },
   {
@@ -139,17 +149,22 @@
    "source": [
     "#Visulization Offense\n",
     "#Offense by Offensive Rating\n",
-    "\n",
     "offensive_rating = offensive_df.sort_values('Offensive Rating', ascending=False)\n",
     "offensive_rating = offensive_rating.head(5)\n",
     "\n",
     "#Creating Bar Graph\n",
-    "plt.bar(offensive_rating['Team Season'], offensive_rating['Offensive Rating'], color='green', alpha=0.7, align='center')\n",
+    "bars = plt.bar(offensive_rating['Team Season'], offensive_rating['Offensive Rating'], color='green', alpha=0.7, align='center')\n",
     "plt.xticks(rotation=45, ha='right')\n",
-    "plt.ylim(115, 120)\n",
-    "plt.yticks(np.arange(115, 121, 0.5))\n",
+    "plt.ylim(116, 119.75)\n",
+    "plt.yticks(np.arange(116, 120, 0.5))\n",
     "plt.ylabel('Offensive Rating')\n",
     "plt.title('Top 5 Teams According to Offensive Rating')\n",
+    "\n",
+    "#Adding Bar Values\n",
+    "for bar in bars:\n",
+    "    yval = bar.get_height()\n",
+    "    plt.text(bar.get_x() + bar.get_width()/2, yval, round(yval, 2), ha='center', va='bottom')\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -161,18 +176,23 @@
    "source": [
     "#Visulization Offense\n",
     "#Points per Game\n",
-    "\n",
     "points_per_game = offensive_df.sort_values('Points Per Game', ascending=False)\n",
     "points_per_game = points_per_game.head(5)\n",
     "\n",
     "\n",
     "#Creating Bar Graph\n",
-    "plt.bar(points_per_game['Team Season'], points_per_game['Assists Per Game'], color='green', alpha=0.7, align='center')\n",
+    "bars = plt.bar(points_per_game['Team Season'], points_per_game['Points Per Game'], color='green', alpha=0.7, align='center')\n",
     "plt.xticks(rotation=45, ha='right')\n",
-    "# plt.ylim(20, 35)\n",
-    "# plt.yticks(np.arange(20, 35, 0.5))\n",
+    "plt.ylim(115, 122.25)\n",
+    "plt.yticks(np.arange(115, 122.5, 0.5))\n",
     "plt.ylabel('Points Per Game')\n",
     "plt.title('Top 5 Teams According to Points Per Game')\n",
+    "\n",
+    "#Adding Bar Values\n",
+    "for bar in bars:\n",
+    "    yval = bar.get_height()\n",
+    "    plt.text(bar.get_x() + bar.get_width()/2, yval, round(yval, 2), ha='center', va='bottom')\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -184,18 +204,23 @@
    "source": [
     "#Visulization Offense\n",
     "#Assists per Game\n",
-    "\n",
     "assists_per_game = offensive_df.sort_values('Assists Per Game', ascending=False)\n",
     "assists_per_game = assists_per_game.head(5)\n",
     "\n",
     "\n",
     "#Creating Bar Graph\n",
-    "plt.bar(assists_per_game['Team Season'], assists_per_game['Assists Per Game'], color='green', alpha=0.7, align='center')\n",
+    "bars = plt.bar(assists_per_game['Team Season'], assists_per_game['Assists Per Game'], color='green', alpha=0.7, align='center')\n",
     "plt.xticks(rotation=45, ha='right')\n",
-    "# plt.ylim(20, 35)\n",
-    "# plt.yticks(np.arange(20, 35, 0.5))\n",
+    "plt.ylim(29, 31.75)\n",
+    "plt.yticks(np.arange(29, 32, 0.5))\n",
     "plt.ylabel('Assists Per Game')\n",
     "plt.title('Top 5 Teams According to Assists Per Game')\n",
+    "\n",
+    "#Adding Bar Values\n",
+    "for bar in bars:\n",
+    "    yval = bar.get_height()\n",
+    "    plt.text(bar.get_x() + bar.get_width()/2, yval, round(yval, 2), ha='center', va='bottom')\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -207,18 +232,23 @@
    "source": [
     "#Visulization Offense\n",
     "#Offensive Rebounds per Game\n",
-    "\n",
     "off_reb_per_game = offensive_df.sort_values('Offensive Rebounds Per Game', ascending=False)\n",
     "off_reb_per_game = off_reb_per_game.head(5)\n",
-    "off_reb_per_game\n",
+    "\n",
     "\n",
     "#Creating Bar Graph\n",
-    "plt.bar(off_reb_per_game['Team Season'], off_reb_per_game['Offensive Rebounds Per Game'], color='green', alpha=0.7, align='center')\n",
+    "bars = plt.bar(off_reb_per_game['Team Season'], off_reb_per_game['Offensive Rebounds Per Game'], color='green', alpha=0.7, align='center')\n",
     "plt.xticks(rotation=45, ha='right')\n",
-    "# plt.ylim(20, 35)\n",
-    "# plt.yticks(np.arange(20, 35, 0.5))\n",
-    "plt.ylabel('Offensive Rebounds per Gam')\n",
+    "plt.ylim(16, 18.5)\n",
+    "plt.yticks(np.arange(16, 19, 0.25))\n",
+    "plt.ylabel('Offensive Rebounds per Game')\n",
     "plt.title('Top 5 Teams by Offensive Rebounds Per Game')\n",
+    "\n",
+    "#Adding Bar Values\n",
+    "for bar in bars:\n",
+    "    yval = bar.get_height()\n",
+    "    plt.text(bar.get_x() + bar.get_width()/2, yval, round(yval, 2), ha='center', va='bottom')\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -243,19 +273,23 @@
    "source": [
     "##Visulization Defense\n",
     "#Defense by Defensive Rating\n",
-    "\n",
     "defensive_rating = defensive_df.sort_values('Defensive Rating', ascending=False)\n",
     "defensive_rating = defensive_rating.head(5)\n",
     "\n",
     "#Creating Bar Graph\n",
-    "plt.bar(defensive_rating['Team Season'], defensive_rating['Defensive Rating'], color='red', alpha=0.7, align='center')\n",
+    "bars = plt.bar(defensive_rating['Team Season'], defensive_rating['Defensive Rating'], color='red', alpha=0.7, align='center')\n",
     "plt.xticks(rotation=45, ha='right')\n",
-    "# plt.ylim(115, 120)\n",
-    "# plt.yticks(np.arange(115, 121, 0.5))\n",
+    "plt.ylim(115, 120.25)\n",
+    "plt.yticks(np.arange(115, 121, 0.5))\n",
     "plt.ylabel('Defensive Rating')\n",
     "plt.title('Top 5 Teams According to Defensive Rating')\n",
-    "plt.show()\n",
-    "\n"
+    "\n",
+    "#Adding Bar Values\n",
+    "for bar in bars:\n",
+    "    yval = bar.get_height()\n",
+    "    plt.text(bar.get_x() + bar.get_width()/2, yval, round(yval, 2), ha='center', va='bottom')\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -266,17 +300,22 @@
    "source": [
     "##Visulization Defense\n",
     "#Defense by Blocks Per Game\n",
-    "\n",
     "defensive_blocks = defensive_df.sort_values('Blocks Per Game', ascending=False)\n",
-    "defensive_blocks = defensive_blocks.head(10)\n",
+    "defensive_blocks = defensive_blocks.head(5)\n",
     "\n",
     "#Creating Bar Graph\n",
-    "plt.bar(defensive_blocks['Team Season'], defensive_blocks['Blocks Per Game'], color='red', alpha=0.7, align='center')\n",
+    "bars = plt.bar(defensive_blocks['Team Season'], defensive_blocks['Blocks Per Game'], color='red', alpha=0.7, align='center')\n",
     "plt.xticks(rotation=45, ha='right')\n",
-    "# plt.ylim(6, 10)\n",
-    "# plt.yticks(np.arange(6, 10, 0.5))\n",
+    "plt.ylim(6, 9.25)\n",
+    "plt.yticks(np.arange(6, 9.5, 0.5))\n",
     "plt.ylabel('Blocks Per Game')\n",
     "plt.title('Top 5 Teams By Blocks Per Game')\n",
+    "\n",
+    "#Adding Bar Values\n",
+    "for bar in bars:\n",
+    "    yval = bar.get_height()\n",
+    "    plt.text(bar.get_x() + bar.get_width()/2, yval, round(yval, 2), ha='center', va='bottom')\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -288,19 +327,23 @@
    "source": [
     "##Visulization Defense\n",
     "#Defense by Steals Per Game\n",
-    "\n",
     "defensive_steals = defensive_df.sort_values('Steals Per Game', ascending=False)\n",
-    "defensive_steals = defensive_steals.head(10)\n",
+    "defensive_steals = defensive_steals.head(5)\n",
     "\n",
-    "#defensive_steals\n",
     "\n",
     "#Creating Bar Graph\n",
-    "plt.bar(defensive_steals['Team Season'], defensive_steals['Steals Per Game'], color='red', alpha=0.7, align='center')\n",
+    "bars = plt.bar(defensive_steals['Team Season'], defensive_steals['Steals Per Game'], color='red', alpha=0.7, align='center')\n",
     "plt.xticks(rotation=45, ha='right')\n",
-    "# plt.ylim(6, 10)\n",
-    "# plt.yticks(np.arange(6, 10, 0.5))\n",
+    "plt.ylim(8, 11.75)\n",
+    "plt.yticks(np.arange(8, 12, 0.5))\n",
     "plt.ylabel('Steals Per Game')\n",
     "plt.title('Top 5 Teams By Steals Per Game')\n",
+    "\n",
+    "#Adding Bar Values\n",
+    "for bar in bars:\n",
+    "    yval = bar.get_height()\n",
+    "    plt.text(bar.get_x() + bar.get_width()/2, yval, round(yval, 2), ha='center', va='bottom')\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -312,19 +355,23 @@
    "source": [
     "##Visulization Defense\n",
     "#Defense by Defensive Rebounds Per Game\n",
-    "\n",
     "def_reb_per_game = defensive_df.sort_values('Defensive Rebounds Per Game', ascending=False)\n",
     "def_reb_per_game = def_reb_per_game.head(5)\n",
     "\n",
-    "def_reb_per_game\n",
     "\n",
     "#Creating Bar Graph\n",
-    "plt.bar(def_reb_per_game['Team Season'], def_reb_per_game['Defensive Rebounds Per Game'], color='red', alpha=0.7, align='center')\n",
+    "bars = plt.bar(def_reb_per_game['Team Season'], def_reb_per_game['Defensive Rebounds Per Game'], color='red', alpha=0.7, align='center')\n",
     "plt.xticks(rotation=45, ha='right')\n",
-    "# plt.ylim(2, 40)\n",
-    "# plt.yticks(np.arange(2, 41, 1.0))\n",
+    "plt.ylim(35, 42.75)\n",
+    "plt.yticks(np.arange(35, 43, 0.5))\n",
     "plt.ylabel('Defensive Rebounds Per Game')\n",
     "plt.title('Top 5 Teams By Defensive Rebounds Per Game')\n",
+    "\n",
+    "#Adding Bar Values\n",
+    "for bar in bars:\n",
+    "    yval = bar.get_height()\n",
+    "    plt.text(bar.get_x() + bar.get_width()/2, yval, round(yval, 2), ha='center', va='bottom')\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -342,24 +389,23 @@
     "best_overall = team_rating.head(5)\n",
     "\n",
     "\n",
-    "best_overall\n",
-    "\n",
     "##Creating Bar Graph\n",
-    "plt.bar(best_overall['Team Season'], best_overall['Overall Rating'], color='r', alpha=0.6, align='center')\n",
+    "bars = plt.bar(best_overall['Team Season'], best_overall['Overall Rating'], color='r', alpha=0.6, align='center')\n",
     "plt.xticks(rotation=45, ha='right')\n",
-    "plt.ylim(230, 236.5)\n",
+    "plt.ylim(230, 236.75)\n",
     "plt.yticks(np.arange(230, 237, 0.5))\n",
     "plt.ylabel('Overall Rating')\n",
     "plt.title('Top 5 Teams According to Overall Rating')\n",
-    "plt.show()"
+    "\n",
+    "#Adding Bar Values\n",
+    "for bar in bars:\n",
+    "    yval = bar.get_height()\n",
+    "    plt.text(bar.get_x() + bar.get_width()/2, yval, round(yval, 2), ha='center', va='bottom')\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "best_overall"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
