--- a/main.ipynb
+++ b/main.ipynb
@@ -18,15 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Import CSV File\n",
+    "## Import CSV Files abd Merge\n",
     "team_summaries_df = pd.read_csv(\"Team Summaries.csv\")\n",
     "team_total_df = pd.read_csv(\"Team Totals.csv\")\n",
     "team_df = pd.merge(team_total_df, team_summaries_df, how='outer')\n",
     "\n",
-    "pd.set_option('display.max_columns', 500)\n",
-    "\n",
-    "team_df.head()\n",
-    "\n"
+    "team_df.head()"
    ]
   },
   {
@@ -36,9 +33,11 @@
    "outputs": [],
    "source": [
     "#Clean/Downsize Data\n",
+    "#Drop Null Values and 2024 (Due to Incomplete Season)\n",
     "team_df = team_df.dropna()\n",
     "year = 2024\n",
     "drop_2024_df = team_df[team_df['season'] != year]\n",
+    "#Create New Dataframe and Renaming Columns For Clarity\n",
     "team_reduced_df = drop_2024_df[[\"season\", \"team\", \"playoffs\", \"g\", \"fg_percent\", \"x3p_percent\", \"x2p_percent\", \"ft_percent\", \"orb\", \"drb\", \"trb\", \"ast\", \"stl\", \"blk\", \"tov\", \"pts\", \"w\", \"l\", \"srs\", \"o_rtg\", \"d_rtg\", \"n_rtg\", \"f_tr\", \"x3p_ar\", \"e_fg_percent\", \"tov_percent\", \"orb_percent\"\n",
     "]]\n",
     "columns = {\n",
@@ -71,7 +70,7 @@
     "    \"orb_percent\": \"Offensive Rebound Percentage\"\n",
     "}\n",
     "team_reduced_df = team_reduced_df.rename(columns=columns)\n",
-    "team_reduced_df.head()\n"
+    "team_reduced_df.head()"
    ]
   },
   {
@@ -82,32 +81,32 @@
    "source": [
     "#Adding exta columns for visiualications\n",
     "\n",
-    "#adding Assists per game\n",
-    "asists_per_game = team_reduced_df[\"Assists\"]/team_reduced_df[\"Games Played\"]\n",
-    "asists_per_game = asists_per_game.map(\"{:,.2f}\".format)\n",
-    "team_reduced_df[\"Assists Per Game\"] = asists_per_game\n",
+    "# Adding Assists per game\n",
+    "assists_per_game = team_reduced_df[\"Assists\"]/team_reduced_df[\"Games Played\"]\n",
+    "assists_per_game = assists_per_game.map(\"{:,.2f}\".format)\n",
+    "team_reduced_df[\"Assists Per Game\"] = assists_per_game\n",
     "\n",
-    "#adding Points per game\n",
+    "# Adding Points per game\n",
     "points_per_game = team_reduced_df[\"Points\"]/team_reduced_df[\"Games Played\"]\n",
     "points_per_game = points_per_game.map(\"{:,.2f}\".format)\n",
     "team_reduced_df[\"Points Per Game\"] = points_per_game\n",
     "\n",
-    "#adding Blocks per game\n",
+    "# Adding Blocks per game\n",
     "blocks_per_game = team_reduced_df[\"Blocks\"]/team_reduced_df[\"Games Played\"]\n",
     "blocks_per_game = blocks_per_game.map(\"{:,.2f}\".format)\n",
     "team_reduced_df[\"Blocks Per Game\"] = blocks_per_game\n",
     "\n",
-    "#adding Steals per game\n",
+    "# Adding Steals per game\n",
     "steals_per_game = team_reduced_df[\"Steals\"]/team_reduced_df[\"Games Played\"]\n",
     "steals_per_game = steals_per_game.map(\"{:,.2f}\".format)\n",
     "team_reduced_df[\"Steals Per Game\"] = steals_per_game\n",
     "\n",
-    "#adding Offensive Rebounds Per Game\n",
+    "# Adding Offensive Rebounds Per Game\n",
     "offensive_rebounds_per_game = team_reduced_df[\"Offensive Rebounds\"]/team_reduced_df[\"Games Played\"]\n",
     "offensive_rebounds_per_game = offensive_rebounds_per_game.map(\"{:,.2f}\".format)\n",
     "team_reduced_df[\"Offensive Rebounds Per Game\"] = offensive_rebounds_per_game\n",
     "\n",
-    "#adding Defensive Rebounds Per Game\n",
+    "# Adding Defensive Rebounds Per Game\n",
     "defensive_rebounds_per_game = team_reduced_df[\"Defensive Rebounds\"]/team_reduced_df[\"Games Played\"]\n",
     "defensive_rebounds_per_game = defensive_rebounds_per_game.map(\"{:,.2f}\".format)\n",
     "team_reduced_df[\"Defensive Rebounds Per Game\"] = defensive_rebounds_per_game\n",
@@ -115,7 +114,7 @@
     "#Renaming teams to include season\n",
     "team_reduced_df['Team Season'] = team_reduced_df['Team'] + ' ' + team_reduced_df['Season'].astype(str)\n",
     "\n",
-    "# Convert string columns back to numerical values\n",
+    "#Convert string columns back to numerical values\n",
     "team_reduced_df[\"Assists Per Game\"] = team_reduced_df[\"Assists Per Game\"].astype(float)\n",
     "team_reduced_df[\"Points Per Game\"] = team_reduced_df[\"Points Per Game\"].astype(float)\n",
     "team_reduced_df[\"Blocks Per Game\"] = team_reduced_df[\"Blocks Per Game\"].astype(float)\n",
@@ -124,10 +123,7 @@
     "team_reduced_df[\"Defensive Rebounds Per Game\"] = team_reduced_df[\"Defensive Rebounds Per Game\"].astype(float)\n",
     "\n",
     "\n",
-    "team_reduced_df.head()\n",
-    "\n",
-    "\n",
-    "\n"
+    "team_reduced_df.head()"
    ]
   },
   {
@@ -136,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##Cleaning Offensive DF\n",
+    "#Cleaning Offensive DF\n",
     "offensive_df = team_reduced_df[[\"Team Season\", \"Playoffs\", \"Offensive Rating\", \"Points Per Game\", \"Field Goal Percentage\", \"Two-Point Percentage\", \"Three-Point Percentage\", \"Free Throw Percentage\", \"Offensive Rebounds Per Game\", \"Offensive Rebounds\", \"Offensive Rebound Percentage\", \"Assists Per Game\", \"Assists\", \"Wins\", \"Losses\", \"Free Throw Rate\", \"Three-Point Attempt Rate\", \"Effective Field Goal Percentage\", \"Turnover Percentage\"]]\n",
     "offensive_df.head()"
    ]
@@ -258,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##Cleaning Defensive\n",
+    "#Cleaning Defensive\n",
     "defensive_df = team_reduced_df[[\"Team Season\", \"Defensive Rebounds Per Game\", \"Defensive Rebounds\", \"Blocks Per Game\", \"Blocks\", \"Steals Per Game\", \"Steals\", \"Turnovers\", \"Losses\", \"Defensive Rating\",\"Turnover Percentage\"\n",
     "]]\n",
     "defensive_df = defensive_df.rename(columns=columns)\n",
@@ -271,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##Visulization Defense\n",
+    "#Visulization Defense\n",
     "#Defense by Defensive Rating\n",
     "defensive_rating = defensive_df.sort_values('Defensive Rating', ascending=False)\n",
     "defensive_rating = defensive_rating.head(5)\n",
@@ -298,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##Visulization Defense\n",
+    "#Visulization Defense\n",
     "#Defense by Blocks Per Game\n",
     "defensive_blocks = defensive_df.sort_values('Blocks Per Game', ascending=False)\n",
     "defensive_blocks = defensive_blocks.head(5)\n",
@@ -353,7 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##Visulization Defense\n",
+    "#Visulization Defense\n",
     "#Defense by Defensive Rebounds Per Game\n",
     "def_reb_per_game = defensive_df.sort_values('Defensive Rebounds Per Game', ascending=False)\n",
     "def_reb_per_game = def_reb_per_game.head(5)\n",
@@ -381,19 +377,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##Visualization Overall\n",
-    "##Sorting Data\n",
-    "team_reduced_df['Overall Rating'] = team_reduced_df['Offensive Rating'] + team_reduced_df['Defensive Rating']\n",
+    "#Visualization Overall\n",
+    "#Sorting Data\n",
+    "team_reduced_df['Overall Rating'] = ((team_reduced_df['Offensive Rating'] + team_reduced_df['Defensive Rating'])/2)\n",
     "team_rating = team_reduced_df.sort_values(by='Overall Rating', ascending=False)\n",
-    "team_rating['Team Season'] = team_rating['Team'] + ' ' + team_rating['Season'].astype(str)\n",
     "best_overall = team_rating.head(5)\n",
     "\n",
     "\n",
-    "##Creating Bar Graph\n",
-    "bars = plt.bar(best_overall['Team Season'], best_overall['Overall Rating'], color='r', alpha=0.6, align='center')\n",
+    "#Creating Bar Graph\n",
+    "bars = plt.bar(best_overall['Team Season'], best_overall['Overall Rating'], color='#6666FE', align='center')\n",
     "plt.xticks(rotation=45, ha='right')\n",
-    "plt.ylim(230, 236.75)\n",
-    "plt.yticks(np.arange(230, 237, 0.5))\n",
+    "plt.ylim(115, 118.25)\n",
+    "plt.yticks(np.arange(115, 119, 0.5))\n",
     "plt.ylabel('Overall Rating')\n",
     "plt.title('Top 5 Teams According to Overall Rating')\n",
     "\n",
@@ -402,9 +397,44 @@
     "    yval = bar.get_height()\n",
     "    plt.text(bar.get_x() + bar.get_width()/2, yval, round(yval, 2), ha='center', va='bottom')\n",
     "\n",
-    "plt.show()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualization Overall\n",
+    "# Sorting Data\n",
+    "team_reduced_df = team_reduced_df.head(500)\n",
+    "team_names = team_reduced_df['Team Season']\n",
     "\n",
-    "best_overall"
+    "#Plotting Scatterplot\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.ylim(95, 125)\n",
+    "plt.xlim(94, 120)\n",
+    "scatter = plt.scatter(team_reduced_df['Offensive Rating'], team_reduced_df['Defensive Rating'], color='#6666FE', alpha=0.6)\n",
+    "plt.xlabel('Offensive Rating')\n",
+    "plt.ylabel('Defensive Rating')\n",
+    "plt.title('Scatter Plot of Offensive Rating vs. Defensive Rating')\n",
+    "plt.grid(False)\n",
+    "\n",
+    "def on_hover(event):\n",
+    "    if event.inaxes == plt.gca():\n",
+    "        for point, name in zip(scatter.get_offsets(), team_names):\n",
+    "            if (point[0] - event.xdata)**2 + (point[1] - event.ydata)**2 < 2:\n",
+    "                plt.annotate(name, xy=(point[0], point[1]), xytext=(5, -5), textcoords='offset points', fontsize=8, ha='right', va='bottom', color='red', bbox=dict(facecolor='white', alpha=0.5))\n",
+    "                plt.draw()\n",
+    "            else:\n",
+    "                plt.gca().texts.clear()\n",
+    "\n",
+    "# Connect hover event to the figure\n",
+    "plt.gcf().canvas.mpl_connect('motion_notify_event', on_hover)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
